tests/snapshots/parse_failure__unexpected_letter_in_negative.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-abcd
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found `Some('a')`
 --> stdin:1:1
  |
1 | -abcd
  | -^
  | |
  | minus sign found here
